# projectdjango

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: categories.json  groups.json  products.json
catalog/management/commands/: clear_cache.py  create_groups.py  load_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py
catalog/templates/catalog/: base.html  catalog.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_moderate.html
catalog/templates/catalog/includes/: footer.html  header_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
users/templates/users/: login.html  register.html
