[project]
name = "projectdjango"
version = "0.1.0"
description = ""
authors = [
    {name = "Chubarov Ilya",email = "i-chubarov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
