[project]
name = "projectdjango"
version = "0.1.0"
description = ""
authors = [
    {name = "Chubarov Ilya",email = "i-chubarov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "ipython (>=9.11.0,<10.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "hiredis (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
